# foundry-custom-vnet

./: .gitignore  README.md  azure.yaml
agents/: README.md
agents/pb-foundry-bing-agent/: .env.example  Makefile  README.md  pyproject.toml
agents/pb-foundry-bing-agent/docs/design/: architecture.md  prd.md  project-structure.md  tech-stack.md  user-flow.md
agents/pb-foundry-bing-agent/scripts/: run_agent.py
agents/pb-foundry-bing-agent/src/foundry_bing_agent/: config.py
agents/pb-foundry-bing-agent/src/foundry_bing_agent/runtime/: __init__.py  agent.py  cache.py  openai_client.py  run.py
agents/pb-foundry-bing-agent/tests/unit/: test_config.py  test_runtime.py
agents/pb-foundryv1-invoice-agent/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
agents/pb-foundryv1-invoice-agent/data/invoices/: invoice_INV-1001.txt  invoice_INV-1002.txt  invoice_INV-1003.txt  invoice_INV-1004.txt  invoice_INV-1005.txt
agents/pb-foundryv1-invoice-agent/docs/design/: architecture.md  prd.md  project-structure.md  tech-stack.md  user-flow.md
agents/pb-foundryv1-invoice-agent/scripts/: index_invoices.py  run_agent.py
agents/pb-foundryv1-invoice-agent/src/foundry_invoice_agent/: config.py  schema.json
agents/pb-foundryv1-invoice-agent/src/foundry_invoice_agent/runtime/: __init__.py  agent.py  cache.py  index.py  openai_client.py  run.py
agents/pb-foundryv1-invoice-agent/tests/unit/: test_config.py  test_runtime.py
docs/: infra_ascii_flows.md  issues_learning.md  troubleshooting.md
infra/: README.md  flows.md  infra-flow.md  issues_learning.md  main.bicep  (+7 more)
(+33 files in other folders)
